# zynthian-quick-components

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLibZL.cmake
debian/: changelog  control  copyright
src/: CMakeLists.txt  FilterProxy.cpp  FilterProxy.h  MidiListener.cpp  MidiListener.h  MidiRecorder.cpp  MidiRecorder.h  Note.cpp  Note.h  NotesModel.cpp  NotesModel.h  PatternImageProvider.cpp  PatternImageProvider.h  PatternModel.cpp  PatternModel.h  PlayGrid.cpp  PlayGrid.h  PlayGridManager.cpp  PlayGridManager.h  SegmentHandler.cpp  SegmentHandler.h  SequenceModel.cpp  SequenceModel.h  SettingsContainer.cpp  SettingsContainer.h  qmldir  qmlplugin.cpp  qmlplugin.h
